# Interfacing-TCRT-5000

./: .gitignore  ls
TCRT_5000_analog_mode/: Cargo.toml  memory.x
TCRT_5000_analog_mode/src/: main.rs
