[package]
name = "TCRT_5000_analog_mode"
version = "0.1.0"
authors = ["Abeer <abeerulhaq8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-itm = "0.4.0"
stm32f3-discovery = "0.6.0"

[dependencies.stm32f3xx-hal]
version = "0.6.0"
features = ["stm32f303xc"]


